--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,9 @@ flutter:
     - family: Cutive
       fonts:
         - asset: fonts/CutiveMono-Regular.ttf
-
+    - family: Raleway
+      fonts:
+        - asset: fonts/Raleway-Regular.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
